# STM32F40X

./: .gitignore  CMakeLists.txt  Makefile  README.md  openOCD.py  set_path.bat  swo_parser.py  test.py  tool.bat
cmake/: clang-llvmb.cmake  gcc-arm-none-eabib.cmake
env/: CMakeLists.txt  Makefile  STM32F401RCTX_FLASH.ld  openocd.cmd  rtt.tcl  stm32f4discovery.cfg  threadx_port.ld
src/Core/Inc/: log.h  tools.h
src/Core/RTT/: log.c
src/Core/SpiFlash/: test_spi.c  w25qxx.c
src/Core/Src/: log.c  main.c  stm32f1xx_irq.c  syscall.c  tools.c
src/Core/Startup/: startup_stm32f401rctx.s
src/Core/Test/: test_spi.c  w25qxx.c  w25qxx.h
src/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f4xx.h
src/Drivers/HAL_Driver/Inc/: hal_flash.h  hal_gpio.h  hal_spi.h  hal_usart.h
src/Drivers/HAL_Driver/Src/: hal_flash.c  hal_gpio.c  hal_rcc.c  hal_spi.c  hal_usart.c
src/MinRTOS/Inc/: MinRTOS.h  portmacro.h  task.h
src/MinRTOS/Src/: task.c
src/app/: log.c  main.c  startup.c
src/app/Inc/: tools.h
src/threadx/ports/inc/: tx_port.h
src/threadx/ports/startup/: cortexm4_crt0.S  tx_initialize_low_level.S
stroge/MinRTOS/Src/: task.c
